# Lumasonic

./: LICENSE  README.md
binaries/macOS/: PrismCleanerSetup.pkg
docs/: README.md
docs/01-Installation/: 01-introduction.md  02-installing-plugins.md
docs/02-Prism-Studio/: 01-introduction.md  02-health-and-safety.md  03-daw-configuration.md
docs/03-Prism-VST/: 01-prism-plugin-overview.md  02-editor-screen.md  03-settings-screen.md  04-license-screen.md  04-sacn-module-overview.md  05-about-screen.md  06-prism-operation.md  07-rendering-output.md  08-kasina.md  09-troubleshooting.md
docs/04-Prism-Audio-Bus/: 01-prism-audio-bus-overview.md
docs/05-Prism-Monitor/: 01-prism-monitor-overview.md
docs/06-Prism-Reference/: 01-prism-reference-overview.md
docs/07-Lumasonic/: 01-lumasonic-overview.md
docs/07-sACN-Module/: 01-sacn-module-overview.md
docs/08-Lumasonic/: 01-lumasonic-overview.md
docs/08-SpectraStrobe/: 01-spectrastrobe-introduction.md  02-devices.md  04-file-formats.md
docs/09-SpectraStrobe/: 03-format-specification.md  05-production-and-mixing.md
sdk/docs/: documentation.html
sdk/docs/html/: _examples_8md.html  _getting_started_8md.html  _lumasonic_codec_8h.html  _lumasonic_codec_8h.js  _lumasonic_codec_8h_source.html  _lumasonic_common_8h.html  _lumasonic_common_8h.js  _lumasonic_common_8h_source.html  _lumasonic_decoder_8h.html  _lumasonic_decoder_8h_source.html  _lumasonic_decoder_api_8h.html  _lumasonic_decoder_api_8h.js  _lumasonic_decoder_api_8h_source.html  _lumasonic_file_player_8h.html  _lumasonic_file_player_8h.js  _lumasonic_file_player_8h_source.html  _lumasonic_file_player_8md.html  _lumasonic_stereo_decoder_8h.html  _lumasonic_stereo_decoder_8h.js  _lumasonic_stereo_decoder_8h_source.html  _lumasonic_stereo_reader_8h.html  _lumasonic_stereo_reader_8h.js  _lumasonic_stereo_reader_8h_source.html  _lumasonic_stereo_udp_listener_8h.html  _lumasonic_stereo_udp_listener_8h.js  _lumasonic_stereo_udp_listener_8h_source.html  _lumasonic_utils_8h.html  _lumasonic_utils_8h.js  _lumasonic_utils_8h_source.html  _prism_product_manager_8md.html  annotated.html  annotated_dup.js  class_ls_utils_1_1_static_lumasonic_encoder-members.html  class_ls_utils_1_1_static_lumasonic_encoder.html  class_ls_utils_1_1_static_lumasonic_encoder.js  class_ls_utils_1_1_tone_generator-members.html  class_ls_utils_1_1_tone_generator.html  class_ls_utils_1_1_tone_generator.js  class_lumasonic_codec-members.html  class_lumasonic_codec.html  (+91 more)
sdk/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  (+36 more)
sdk/examples/decoder/: CMakeLists.txt
sdk/examples/decoder/app/: CMakeLists.txt  Main.cpp
sdk/examples/player/: CMakeLists.txt
sdk/examples/player/app/: CMakeLists.txt  Main.cpp
sdk/examples/reader/: CMakeLists.txt
sdk/examples/reader/app/: CMakeLists.txt  Main.cpp
sdk/include/: LumasonicCodec.h  LumasonicCommon.h  LumasonicDecoder.h  LumasonicDecoderApi.h  LumasonicFilePlayer.h  LumasonicStereoDecoder.h  LumasonicStereoReader.h  LumasonicStereoUdpListener.h  LumasonicUtils.h  README.md
sdk/lib/: CMakeLists.txt
sdk/lib/win/AMD64/debug/: LumasonicDecoder.lib
sdk/lib/win/AMD64/release/: LumasonicDecoder.lib
sdk/media/: LumasonicMultiTrackSweep.mixed.flac
sdk/tools/www/: README.md  index.html  lsfplayer.css  lsfplayer.js
